[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-app"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["demo_app"]

[tool.coverage.report]
fail_under = 90
